--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "dependencies": {
-    "crypto-js": "^4.1.1"
-    
+    "crypto-js": "^4.1.1",
+    "sha256": "^0.2.0"
   },
-  
   "type": "module"
 }
