--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "crypto-js": "^4.1.1",
+    "hash": "^0.2.1",
+    "hash.js": "^1.1.7",
     "sha256": "^0.2.0"
   },
   "type": "module"
